--- a/Fitness Tracker.html
+++ b/Fitness Tracker.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1><center>My Fitness Tracker</center></h1>
-    <h2><center>Fitness tracking wearable technology!<center></h2>
+    <h2><center>Fitness tracking wearable technology!</center></h2>
 	<br>
 	<center><img src="fitnesstracker.jpg" width="300" height="300"></center>
     <p>Do you need to monitor:</p>
