--- a/Fitness Tracker.html
+++ b/Fitness Tracker.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <h1><center>My Fitness Tracker</center></h1>
-    <h2><center>Fitness tracking wearable technology!</center></h2>
+    <h2><center>Fitness tracking wearable technology!<center></h2>
 	<br>
 	<center><img src="fitnesstracker.jpg" width="300" height="300"></center>
+	
     <p>Do you need to monitor:</p>
     <ul>
       <li>your heart rate</li>
@@ -21,9 +22,8 @@
 	other stats on your wristband. Wirelessly
 	syncs with your mobile device using
 	Bluetooth to upload to our tracking website!</p>
+	
 	<p>Click the link below to find out more:</p>
-
     <a href="https://fitnesstracker.co.uk/"> www.myfitnesstracker.co.uk </a>
-
   </body>
 </html>
